--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.9.40</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
